# advent-of-code

./: .gitignore  Cargo.toml
src/: helper.rs  main.rs
src/solutions/: solutions.rs
src/solutions/day_1/: problem_1.rs  problem_2.rs
src/solutions/day_10/: problem_1.rs  problem_2.rs
src/solutions/day_11/: problem_1.rs  problem_2.rs
src/solutions/day_12/: problem_1.rs  problem_2.rs
src/solutions/day_2/: problem_1.rs  problem_2.rs
src/solutions/day_3/: problem_1.rs  problem_2.rs
src/solutions/day_4/: problem_1.rs  problem_2.rs
src/solutions/day_5/: problem_1.rs  problem_2.rs
src/solutions/day_6/: problem_1.rs  problem_2.rs
src/solutions/day_7/: problem_1.rs  problem_2.rs
src/solutions/day_8/: problem_1.rs  problem_2.rs
src/solutions/day_9/: problem_1.rs  problem_2.rs
src/solutions/example/: problem_1.rs  problem_2.rs
